2015-06-06  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc: added hllcounter_merge.
   * tests/test_hll.py: added merge tests.
   * lib/hllcounter.cc: changed HLLCounter::consume_string to uppercase input.
   * sandbox/unique-kmers.py: added --stream-out option; updated to print out
   k-mers per file as well as k-mer size used.

2015-06-04  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc: added error handling to load_partitionmap.
   * lib/subset.cc: modified partitionmap format to detect truncated files;
   changed untestable sanity checks to assertions.
   * tests/{test_counting_hash,test_hashbits,test_subset_graph}.py: added
   tests to try loading all possible truncations of binary save files.

2015-06-04  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc,lib/hashbits.{cc,hh}: add Hashbits::update_from()
   and Hashbits.update().
   * tests/test_hashbits.py: associated tests.

2015-06-01  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/normalize-by-median.py: major refactoring to use context
   managers and classes; fixed -R
   * tests/test_scripts.py: added test for normalize's -R arg
   
2015-06-01  Tamer Mansour <drtamermansour@gmail.com>

   * scripts/normalize-by-median.py: changed to count kmers from both PE reads
   when either one of them is below the coverage cutoff
   * tests/test_scripts.py: Added test for new behaviour

2015-05-26  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc: refactor CPython layer so that KHashtable
   is at base of CountingHash and Hashbits.
   * lib/hashbits.hh: add n_entries() function from Hashtable::n_entries.
   * lib/hashtable.hh: add several virtual functions to Hashtable that exist in
   CountingHash and Hashbits.

2015-05-26  Titus Brown  <titus@idyll.org>

   * khmer/{__init__.py,_khmermodule.cc},lib/labelhash.{cc,hh},
   lib/{hashtable,khmer}.hh: changed LabelHash to be a "friend" of Hashtable,